crates/uitest/fixtures/ty_check/inline_attr_duplicate.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/inline_attr_duplicate.fe
---
error[13-0001]: duplicate `#[inline]` attribute on function `bad`
  ┌─ inline_attr_duplicate.fe:2:1
  │
2 │ #[inline(always)]
  │ ^^^^^^^^^^^^^^^^^ remove the extra `#[inline]` attribute
  │
  = functions support at most one inline hint
  = use one of `#[inline]`, `#[inline(always)]`, or `#[inline(never)]`
